# backend/src/main/java/com/aksi/exception/ResourceNotFoundException.java
@@ -1,17 +1,0 @@
-package com.aksi.exception;
-
-import org.springframework.http.HttpStatus;
-import org.springframework.web.bind.annotation.ResponseStatus;
-
-/** Exception thrown when requested resource is not found */
-@ResponseStatus(HttpStatus.NOT_FOUND)
-public class ResourceNotFoundException extends RuntimeException {
-
-  public ResourceNotFoundException(String message) {
-    super(message);
-  }
-
-  public ResourceNotFoundException(String message, Throwable cause) {
-    super(message, cause);
-  }
-}
